publisher/kubernetes/publisher_deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hazelcast-publisher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hazelcast-publisher
  template:
    metadata:
      labels:
        app: hazelcast-publisher
    spec:
      containers:
        - name: hazelcast-publisher
          image: publisher:0.0.1
          imagePullPolicy: Never
          ports:
          - containerPort: 8080
          - containerPort: 5701
---
apiVersion: v1
kind: Service
metadata:
  name: hazelcast-publisher
spec:
  type: LoadBalancer
  selector:
    app: hazelcast-publisher
  ports:
  - name: app
    port: 8080
