publisher/kubernetes/publisher_ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: publisher-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - http:
        paths:
          - path: /message/.*
            backend:
              serviceName: hazelcast-publisher
              servicePort: 8080
---
